--- a/client/assets/list.html
+++ b/client/assets/list.html
@@ -5,222 +5,190 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Music Player</title>
-  <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/css/app.css">
-  <link href="http://fonts.useso.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+  <title>Songs</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link href="//fonts.useso.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
 </head>
 
 <body class="page">
   <header class="header">
-    <a v-link="{ name: 'home' }"><i class="fa fa-expand"></i></a>
-    <h1><i class="fa fa-music"></i> Music Player</h1>
-    <a v-link="{ name: 'list' }"><i class="fa fa-list"></i></a>
+    <a href="home.html"><i class="fa fa-expand"></i></a>
+    <h1><i class="fa fa-music"></i> Songs</h1>
+    <a href="list.html"><i class="fa fa-list"></i></a>
   </header>
   <section class="main">
-    <router-view></router-view>
-  </section>
-  <script id="home_tmpl" type="text/v-template">
-    <img src="assets/img/home.png" alt="" width="100%">
-  </script>
-  <script id="list_tmpl" type="text/v-template">
     <div class="list">
       <ol>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">001</span>
             <div class="info">
               <h3 class="title">一生中最爱</h3>
               <span class="artist">谭咏麟</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/谭咏麟.jpg" alt="谭咏麟"></div>
+            <div class="photo"><img src="img/谭咏麟.jpg" alt="谭咏麟"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">002</span>
             <div class="info">
               <h3 class="title">合久必婚</h3>
               <span class="artist">李克勤</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/李克勤.jpg" alt="李克勤"></div>
+            <div class="photo"><img src="img/李克勤.jpg" alt="李克勤"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">003</span>
             <div class="info">
               <h3 class="title">送情郎(2010.12.11 德云二队张一元晚场)</h3>
               <span class="artist">岳云鹏</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/岳云鹏.jpg" alt="岳云鹏"></div>
+            <div class="photo"><img src="img/岳云鹏.jpg" alt="岳云鹏"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">001</span>
             <div class="info">
               <h3 class="title">一生中最爱</h3>
               <span class="artist">谭咏麟</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/谭咏麟.jpg" alt="谭咏麟"></div>
+            <div class="photo"><img src="img/谭咏麟.jpg" alt="谭咏麟"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">002</span>
             <div class="info">
               <h3 class="title">合久必婚</h3>
               <span class="artist">李克勤</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/李克勤.jpg" alt="李克勤"></div>
+            <div class="photo"><img src="img/李克勤.jpg" alt="李克勤"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">003</span>
             <div class="info">
               <h3 class="title">送情郎(2010.12.11 德云二队张一元晚场)</h3>
               <span class="artist">岳云鹏</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/岳云鹏.jpg" alt="岳云鹏"></div>
+            <div class="photo"><img src="img/岳云鹏.jpg" alt="岳云鹏"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">001</span>
             <div class="info">
               <h3 class="title">一生中最爱</h3>
               <span class="artist">谭咏麟</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/谭咏麟.jpg" alt="谭咏麟"></div>
+            <div class="photo"><img src="img/谭咏麟.jpg" alt="谭咏麟"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">002</span>
             <div class="info">
               <h3 class="title">合久必婚</h3>
               <span class="artist">李克勤</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/李克勤.jpg" alt="李克勤"></div>
+            <div class="photo"><img src="img/李克勤.jpg" alt="李克勤"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">003</span>
             <div class="info">
               <h3 class="title">送情郎(2010.12.11 德云二队张一元晚场)</h3>
               <span class="artist">岳云鹏</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/岳云鹏.jpg" alt="岳云鹏"></div>
+            <div class="photo"><img src="img/岳云鹏.jpg" alt="岳云鹏"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">001</span>
             <div class="info">
               <h3 class="title">一生中最爱</h3>
               <span class="artist">谭咏麟</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/谭咏麟.jpg" alt="谭咏麟"></div>
+            <div class="photo"><img src="img/谭咏麟.jpg" alt="谭咏麟"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">002</span>
             <div class="info">
               <h3 class="title">合久必婚</h3>
               <span class="artist">李克勤</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/李克勤.jpg" alt="李克勤"></div>
+            <div class="photo"><img src="img/李克勤.jpg" alt="李克勤"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">003</span>
             <div class="info">
               <h3 class="title">送情郎(2010.12.11 德云二队张一元晚场)</h3>
               <span class="artist">岳云鹏</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/岳云鹏.jpg" alt="岳云鹏"></div>
+            <div class="photo"><img src="img/岳云鹏.jpg" alt="岳云鹏"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">001</span>
             <div class="info">
               <h3 class="title">一生中最爱</h3>
               <span class="artist">谭咏麟</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/谭咏麟.jpg" alt="谭咏麟"></div>
+            <div class="photo"><img src="img/谭咏麟.jpg" alt="谭咏麟"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">002</span>
             <div class="info">
               <h3 class="title">合久必婚</h3>
               <span class="artist">李克勤</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/李克勤.jpg" alt="李克勤"></div>
+            <div class="photo"><img src="img/李克勤.jpg" alt="李克勤"></div>
           </a>
         </li>
         <li>
-          <a v-link="{ name: 'item', params: { id: 10 } }">
+          <a href="item.html">
             <span class="num">003</span>
             <div class="info">
               <h3 class="title">送情郎(2010.12.11 德云二队张一元晚场)</h3>
               <span class="artist">岳云鹏</span>
             </div>
             <span class="duration">04:50</span>
-            <div class="photo"><img src="assets/img/岳云鹏.jpg" alt="岳云鹏"></div>
+            <div class="photo"><img src="img/岳云鹏.jpg" alt="岳云鹏"></div>
           </a>
         </li>
       </ol>
     </div>
-  </script>
-  <script id="item_tmpl" type="text/v-template">
-    <div class="player">
-      <div class="disc">
-        <img src="assets/img/李克勤.jpg" alt="李克勤">
-        <span class="duration">4:20</span>
-      </div>
-      <h2 class="title">月半小夜曲</h2>
-      <h3 class="artist">李克勤</h3>
-      <div class="lyric">
-        <p class="previous">人如天上的明月是不可拥有</p>
-        <p class="current">情如曲过只遗留无可挽救再分别</p>
-        <p class="next">为何只是失望填密我的空虚</p>
-      </div>
-      <input type="range" value="0">
-      <div class="controls">
-        <button><i class="fa fa-retweet"></i></button>
-        <button class="active"><i class="fa fa-backward"></i></button>
-        <button class="active"><i class="fa fa-play"></i></button>
-        <button class="active"><i class="fa fa-forward"></i></button>
-        <button class="active"><i class="fa fa-random"></i></button>
-      </div>
-    </div>
-  </script>
-  <script src="libs/vue/vue.js"></script>
-  <script src="libs/vue-router/vue-router.js"></script>
-  <script src="app.js"></script>
+  </section>
 </body>
 
 </html>
