--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/font-awesome.css">
   <link rel="stylesheet" href="assets/css/app.css">
-  <link href="http://fonts.useso.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+  <!-- <link href="http://fonts.useso.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css"> -->
 </head>
 
 <body class="page">
